--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     line-height: 26px;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.5s;
+    transition: rotate(90deg);
 }
 
 #accordion label + input[type="radio"]:checked + .content {
